--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,9 @@
     "description": "Zend Log stored in a file",
     "type": "library",
     "require": {
-        "zendframework/zend-authentication": "^2.5"
+        "zendframework/zend-authentication": "^2.5",
+        "zendframework/zend-log": "^2.9",
+        "zendframework/zend-session": "^2.8"
     },
     "license": "GPL-3.0",
     "authors": [
