--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
         "zendframework/zend-log": "^2.9",
         "zendframework/zend-session": "^2.8"
     },
-    "license": "GPL-3.0",
+    "license": "GPL-3.0-or-later",
     "authors": [
         {
             "name": "Jonathan Beliën",
