--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
     "require": {
         "zendframework/zend-authentication": "^2.5",
         "zendframework/zend-log": "^2.9",
-        "zendframework/zend-session": "^2.8"
+        "zendframework/zend-session": "^2.8",
+        "jenssegers/agent": "^2.6"
     },
     "license": "GPL-3.0-or-later",
     "authors": [
