--- a/composer.json
+++ b/composer.json
@@ -3,18 +3,13 @@
     "description": "Zend Log stored in a file",
     "type": "library",
     "require": {
-        "zendframework/zend-authentication": "^2.5",
-        "zendframework/zend-log": "^2.9",
-        "zendframework/zend-session": "^2.8",
-        "jenssegers/agent": "^2.6"
+        "laminas/laminas-authentication": "^2.5",
+        "laminas/laminas-log": "^2.9",
+        "laminas/laminas-session": "^2.8",
+        "jenssegers/agent": "^2.6",
+        "laminas/laminas-dependency-plugin": "^1.0"
     },
     "license": "GPL-3.0-or-later",
-    "authors": [
-        {
-            "name": "Jonathan Beliën",
-            "email": "jbe@geo6.be"
-        }
-    ],
     "autoload": {
         "psr-4": {
             "Geo6\\Zend\\Log\\": "src/"
