--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         "psr/http-message": "^1.0"
     },
     "replace": {
-        "geo6/zend-log-filesystem": "self.version"
+        "geo6/zend-log-filesystem": "1.0"
     },
     "autoload": {
         "psr-4": {
