--- a/composer.json
+++ b/composer.json
@@ -1,15 +1,15 @@
 {
     "name": "geo6/zend-log-filesystem",
-    "description": "Zend Log stored in a file",
     "type": "library",
-    "require": {
-        "laminas/laminas-authentication": "^2.5",
-        "laminas/laminas-log": "^2.9",
-        "laminas/laminas-session": "^2.8",
-        "jenssegers/agent": "^2.6",
-        "laminas/laminas-dependency-plugin": "^1.0"
-    },
+    "description": "Zend Log stored in a file",
     "license": "GPL-3.0-or-later",
+    "require": {
+        "jenssegers/agent": "^2.6",
+        "laminas/laminas-authentication": "^2.5",
+        "laminas/laminas-dependency-plugin": "^1.0",
+        "laminas/laminas-log": "^2.9",
+        "laminas/laminas-session": "^2.8"
+    },
     "autoload": {
         "psr-4": {
             "Geo6\\Zend\\Log\\": "src/"
